--- a/src/test/resources/config/local.properties
+++ b/src/test/resources/config/local.properties
@@ -1,7 +1,7 @@
 browser=chrome
-browserVersion=97.0
+browserVersion=91.0
 browserSize=1920x1080
 browserMobileView=
 #browserMobileView=iPhone X
-remoteDriverUrl=
-videoStorage=
+remoteDriverUrl=http://localhost:4444/wd/hub
+videoStorage=http://localhost:4444/video/
