--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,51 @@
 plugins {
     id 'java-library'
-    id 'io.qameta.allure' version '2.8.1'
+    id 'io.qameta.allure' version '2.9.6'
 }
 
 repositories {
     mavenCentral()
 }
 
-def allureVersion = "2.14.0",
-    selenideVersion = "5.24.0",
-    junitVersion = "5.7.2"
+def allureVersion = "2.17.3",
+    junitVersion = "5.8.2",
+    selenideVersion = "6.4.0",
+    slf4jVersion = "1.7.32"
 
 allure {
-    version = allureVersion
-    autoconfigure = true
-    aspectjweaver = true
-    configuration = "testImplementation"
-    useJUnit5 {
-        version = allureVersion
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set(allureVersion)
+            }
+        }
+    }
+    report {
+        version.set(allureVersion)
     }
 }
 
 dependencies {
-    testImplementation(
-            "org.aspectj:aspectjweaver:1.9.6",
-            "com.codeborne:selenide:$selenideVersion",
-            "io.qameta.allure:allure-selenide:$allureVersion",
-            "io.rest-assured:rest-assured:4.3.1",
-            "io.qameta.allure:allure-rest-assured:$allureVersion",
-            "org.aeonbits.owner:owner:1.0.12",
-            "org.assertj:assertj-core:3.19.0",
-            "org.junit.jupiter:junit-jupiter-api:$junitVersion")
-    testRuntimeOnly(
-            "org.slf4j:slf4j-simple:1.7.29",
-            "org.junit.jupiter:junit-jupiter-engine:$junitVersion")
+    // Selenide
+    testImplementation("com.codeborne:selenide:$selenideVersion")
+    testRuntimeOnly("org.slf4j:slf4j-simple:$slf4jVersion")
+
+    // Selenoid file download
+    testImplementation("org.selenide:selenide-selenoid:2.2.1")
+
+    // JUnit 5
+    testImplementation("org.junit.jupiter:junit-jupiter:$junitVersion")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
+
+    // Allure
+    testImplementation("io.qameta.allure:allure-selenide:$allureVersion")
+
+    // Owner
+    testImplementation("org.aeonbits.owner:owner:1.0.12")
+
+    // Asserts
+    testImplementation('org.assertj:assertj-core:3.22.0')
 }
 
 tasks.withType(JavaCompile) {
